appId: com.conuwalks.app
---
- runFlow:
    file: ../subflows/launch-with-mock-data.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- waitForAnimationToEnd
- runFlow:
    file: ../subflows/clear-next-class-banner.yaml

- tapOn:
    id: "calendarview-button"
- waitForAnimationToEnd
- assertVisible: "Today"
- tapOn:
    id: "directions-button"
- waitForAnimationToEnd
- assertVisible: ".* ETA"
- assertVisible: ".* min"

- runFlow:
    file: ../subflows/close-popup.yaml
