appId: com.conuwalks.app
---
- runFlow:
    file: ../subflows/launch.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- setLocation:
    latitude: 45.495633
    longitude: -73.578902
- tapOn:
    id: "recenter-location-button"
- waitForAnimationToEnd

- longPressOn:
    point: 50%, 18%
- waitForAnimationToEnd

- assertVisible: "Hall Building"
- tapOn:
    id: "floor-9-button"
- assertVisible:
    id: "room-label-937"
- tapOn:
    id: "floor-8-button"
- assertVisible:
    id: "room-label-801"
- tapOn:
    id: "indoor-back-button"

- longPressOn:
    point: 50%, 59%
- waitForAnimationToEnd
- assertVisible: "John Molson Building.*"
- tapOn:
    id: "floor-2-button"
- assertVisible:
    id: "room-label-210"
- tapOn:
    id: "floor-1-button"
- assertVisible:
    id: "room-label-401"
- tapOn:
    id: "indoor-back-button"
